2005-04-28  Volker Stroebel <volker@planetpenguin.de>
	* src/keyboardconfig.cpp
	added more keybindings
	fallback for "unknown" keys
	
2005-04-27  Volker Stroebel <volker@planetpenguin.de>
	* src/ppgltk/button.*
	fixed crash

2005-03-11  Volker Stroebel <volker@planetpenguin.de>
	* src/ppgltk/button.*
	changed const char* to std::string

	* src/*
	and again... some cleanups

2005-03-09  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	added more functions to the glwrappers
	and changed more code to use glwrappers

2005-03-07  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	fixed compilation with gcc 2.95
	fixed compilation with tcl<8.4
	
	* data/ppracer.png
	replaced icon with the new one from Helder Correia

2005-03-06  Volker Stroebel <volker@planetpenguin.de>
	* data/makefile.am data/*
	added ppracer.png and ppracer.desktop
	
	* data/languages/* src/credits.cpp
	added polish translation
	updated credits

	* src/*
	code cleanups
	removed old style casts

	* src/textfontmetric.*
	removed unused files
	
	* src/ppgltk/alg/glwrappers.h
	removed unsave types
	
	* src/credits.cpp data/languages/*
	made credits translateable
	updated translations
	
	* src/game_over.cpp
	darken background
	
	* data/textures/hud*.* data/courses/themes/huds/common/hud.tcl
	changed common hud and added new textures

2005-03-05  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	implemented OpenGL wrapper
	changed code to use new OpenGL wrapper

2005-03-01  Volker Stroebel <volker@planetpenguin.de>
	* src/configuration.*
	fixed keyhandling in configuration
	
	* src/ppgltk/font.*
	fixed windows build
		
	* src/*
	code cleanups
	
=== ppracer 0.3.1 ===

2005-02-28  Volker Stroebel <volker@planetpenguin.de>
	* src/data/translations
	updated translations

2005-02-27  Volker Stroebel <volker@planetpenguin.de>
	* src/ppgltk/audio/audio_data.cpp src/hier_util.cpp
	  src/phys_sim.cpp src/ppgltk/textarea.cpp
	  src/credis.cpp src/hud.cpp src/quadtree.cpp